fix(listing): retain conditional promotion economic basis